kubernetes/apps/bookbuddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookbuddy
  namespace: bookbuddy
  labels:
    app: bookbuddy
spec:
  selector:
    app: bookbuddy
  ports:
    - { name: http, port: 8080, targetPort: 8080 }
